--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,4 +23,6 @@ jobs:
         go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: |
+        cd src
+        go test -v ./...
