--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,11 +18,7 @@ jobs:
         go-version: 1.18
 
     - name: Build
-      run: |
-        cd src
-        go build -v ./...
+      run: go build -v ./...
 
     - name: Test
-      run: |
-        cd src
-        go test -v ./...
+      run: go test -v ./...
