--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Build and push docker image  
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
-        image: Apachy999/go-web/go-site-image
+        image: go-web/go-site-image
         registry: ghcr.io
    #     githubOrg: override-org # optional
         username: Apachy999
